Improved configuration for the application.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-logging.level.root=WARN
+#--------------------------------
+# Tomcat Port 
+#----------------------------------
+server.port = 8090
+
+# ----------------------------------------
+# Logging Level
+# ----------------------------------------
+logging.level.root=error
+logging.level.org.springframework=error
+logging.level.org.hibernate=error
+
+# ----------------------------------------
+# ACTUATOR PROPERTIES
+# ----------------------------------------
+endpoints.actuator.enabled=false
+management.security.enabled=false
