--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ logging.level.org.hibernate=error
 # ----------------------------------------
 endpoints.actuator.enabled=false
 management.security.enabled=false
+
+csv.datasource=partsData.csv
+provider.url=http://localhost:8085
